# edenai-apis

./: .env.example  .gitattributes  .gitignore  .pylintrc  AVAILABLES_FEATURES_AND_PROVIDERS.md  CLAUDE.md  CONTRIBUTE.md  LICENSE  MANIFEST.in  PACKAGE_STRUCTURE.md  README.md  constraints.txt  pyproject.toml  pyvenv.cfg  requirements.in  requirements.txt  setup.py  test.ipynb  test_tenstorrent.py
.circleci/: config.yml
.docsrc/: api.rst  conf.py
.docsrc/_autosummary/: apis.affinda.rst  apis.amazon.amazon_api.rst  apis.api4ai.rst  apis.clarifai.clarifai_api.rst  apis.dataleon.dataleon_api.rst  apis.dataleon.rst  apis.emvista.emvista_api.rst  apis.emvista.rst  apis.google.google_api.rst  apis.google.rst  apis.huggingface.huggingface_api.rst  apis.huggingface.rst  apis.ibm.rst  apis.lettria.rst  apis.meaningcloud.meaningcloud_api.rst  apis.microsoft.microsoft_helpers.rst  apis.modernmt.modernmt_api.rst  apis.neuralspace.config.rst  apis.neuralspace.rst  apis.oneai.rst  apis.openai.openai_api.rst  apis.openai.rst  apis.phedone.phedone_api.rst  apis.phedone.rst  apis.picpurify.helpers.rst  apis.sentisight.rst  apis.smartclick.rst  apis.tabscanner.tabscanner_api.rst  apis.voci.voci_api.rst  edenai_apis.apis.amazon.config.rst  edenai_apis.apis.amazon.rst  edenai_apis.apis.api4ai.api4ai_api.rst  edenai_apis.apis.deepl.rst  edenai_apis.apis.emvista.emvista_api.rst  edenai_apis.apis.emvista.rst  edenai_apis.apis.google.google_api.rst  edenai_apis.apis.hireability.hireability_api.rst  edenai_apis.apis.hireability.rst  edenai_apis.apis.huggingface.huggingface_api.rst  edenai_apis.apis.huggingface.mt_models_huggingface.rst  (+81 more)
.docsrc/_build/: edenai_apis.apis.affinda.rst  edenai_apis.apis.amazon.rst  edenai_apis.apis.api4ai.rst  edenai_apis.apis.assembly.rst  edenai_apis.apis.base64.rst  edenai_apis.apis.clarifai.rst  edenai_apis.apis.cohere.rst  edenai_apis.apis.connexun.rst  edenai_apis.apis.dataleon.rst  edenai_apis.apis.deepgram.rst  edenai_apis.apis.emvista.rst  edenai_apis.apis.google.rst  edenai_apis.apis.hrflow.rst  edenai_apis.apis.huggingface.rst  edenai_apis.apis.ibm.rst  edenai_apis.apis.lettria.rst  edenai_apis.apis.meaningcloud.rst  edenai_apis.apis.mindee.rst  edenai_apis.apis.modernmt.rst  edenai_apis.apis.neuralspace.rst  edenai_apis.apis.oneai.rst  edenai_apis.apis.openai.rst  edenai_apis.apis.picpurify.rst  edenai_apis.apis.revai.rst  edenai_apis.apis.rst  edenai_apis.apis.sentisight.rst  edenai_apis.apis.smartclick.rst  edenai_apis.apis.symbl.rst  edenai_apis.apis.tabscanner.rst  edenai_apis.apis.voxist.rst  edenai_apis.features.audio.rst  edenai_apis.features.audio.speech_to_text_async.rst  edenai_apis.features.audio.text_to_speech.rst  edenai_apis.features.base_provider.rst  edenai_apis.features.image.data.rst  edenai_apis.features.image.face_detection.rst  edenai_apis.features.image.landmark_detection.rst  edenai_apis.features.image.logo_detection.rst  edenai_apis.features.image.rst  edenai_apis.features.image.search.delete_image.rst  (+34 more)
.github/workflows/: circIeci.yml  static.yml  test.yml
.trunk/: trunk.yaml
docs/: api.html  genindex.html  index.html  objects.inv  py-modindex.html  searchindex.js
docs/_autosummary/: apis.affinda.html  apis.amazon.amazon_api.html  apis.amazon.config.html  apis.amazon.html  apis.api4ai.html  apis.base64.base64_api.html  apis.base64.html  apis.clarifai.clarifai_api.html  apis.clarifai.clarifai_helpers.html  apis.connexun.connexun_api.html  apis.dataleon.dataleon_api.html  apis.emvista.emvista_api.html  apis.emvista.html  apis.google.get_tag_name.html  apis.google.google_api.html  apis.google.html  apis.hireability.hireability_api.html  apis.hireability.html  apis.huggingface.explore_mt_models.html  apis.huggingface.huggingface_api.html  apis.huggingface.mt_models_huggingface.html  apis.ibm.config.html  apis.ibm.html  apis.ibm.ibm_api.html  apis.lettria.html  apis.lettria.lettria_api.html  apis.lettria.lettria_tags.html  apis.meaningcloud.html  apis.meaningcloud.meaningcloud_api.html  apis.microsoft.config.html  apis.microsoft.config.rst  apis.microsoft.html  apis.microsoft.microsoft_api.html  apis.microsoft.microsoft_helpers.html  apis.mindee.html  apis.mindee.mindee_api.html  apis.modernmt.modernmt_api.html  apis.neuralspace.config.html  apis.neuralspace.html  apis.neuralspace.neuralspace_api.html  (+208 more)
docs/_build/: edenai_apis.apis.deepl.rst  edenai_apis.apis.hireability.rst  edenai_apis.apis.microsoft.rst  edenai_apis.apis.phedone.rst  edenai_apis.apis.voci.rst  edenai_apis.features.image.anonymization.rst  edenai_apis.features.image.explicit_content.rst  edenai_apis.features.image.object_detection.rst  edenai_apis.features.image.search.rst  edenai_apis.features.rst  edenai_apis.features.text.anonymization.rst  edenai_apis.features.text.question_answer.rst  edenai_apis.features.text.topic_extraction.rst  edenai_apis.loaders.rst  edenai_apis.rst  edenai_apis.tests.rst
docs/_sources/: index.rst.txt
edenai_apis/: .coveragerc  __init__.py  interface.py  interface_2.py  interface_v2.py  pytest.ini  settings.py
edenai_apis/api_keys/: ai21labs_settings_template.json  amazon_settings_template.json  anthropic_settings_template.json  api4ai_settings_template.json  assembly_settings_template.json  base64_settings_template.json  clarifai_settings_template.json  cloudflare_settings_template.json  cohere_settings_template.json  common_settings_template.json  connexun_settings_template.json  corticalio_settings_template.json  databricks_settings_template.json  dataleon_settings_template.json  deepgram_settings_template.json  deepl_settings_template.json  eagledoc_settings_template.json  extracta_settings_template.json  facepp_settings_template.json  gladia_settings_template.json  google_settings_template.json  gradiumai_settings_template.json  hireability_settings_template.json  hirize_settings_template.json  ibm_settings_template.json  klippa_settings_template.json  leonardo_settings_template.json  lovoai_settings_template.json  meta_settings_template.json  microsoft_settings_template.json  mindee_settings_template.json  (+32 more)
(+2041 files in other folders)
