[project]
name = "edenaiapis"
version = "0.1.2"
description = "Providers connectors"
dynamic = ["dependencies"]
requires-python = ">=3.8"
license = { file = "LICENCE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
authors = [
    {name = "Samy Melaine", email = "samy@edenai.co"},
    {name = "François Humbert", email = "francois.humbert@edenai.co"},
    {name = "Adnane Guettaf", email = "adnane.guettaf@edenai.co" },
    {name = "Abdelghani Kaoula", email = "ghani.kaoula@edenai.co"},
    {name = "Kyrian Castel", email = "kyrian.castel@edenai.co"},
    {name = "Corentin Scialpi", email = "corentin.scialpi@edenai.co"}
]
maintainers = [
    {name = "Samy Melaine", email = "samy@edenai.co"},
    {name = "François Humbert", email = "francois.humbert@edenai.co"},
    {name = "Adnane Guettaf", email = "adnane.guettaf@edenai.co" },
    {name = "Abdelghani Kaoula", email = "ghani.kaoula@edenai.co"},
    {name = "Kyrian Castel", email = "kyrian.castel@edenai.co"},
    {name = "Corentin Scialpi", email = "corentin.scialpi@edenai.co"}
]
readme = "README.md"
keywords = ["IA", "connectors","API", "AI engines"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[project.urls]
repository = "https://github.com/edenai/edenai-apis"
homepage = "https://www.edenai.co/"
documentation = "https://docs.edenai.co/docs"